--- a/res/layout/learn.xml
+++ b/res/layout/learn.xml
@@ -38,15 +38,24 @@
             android:textSize="20sp" />
     </RelativeLayout>
 
+    <!--
+     android:groupIndicator="@null" 取消默认图片
+    android:childIndicatorLeft 设置孩子左边间距
+    android:dividerHeight 这个高度一定要设置，不然显示不出来分割线，估计默认为0 吧
+     android:childDivider="@drawable/child_bg" 这个直接引color,或者图片会导致整个孩子背景都为这个颜色  ，不知道原因，如果有谁知道，请Give me say.
+    -->
+
     <ExpandableListView
-        android:id="@id/android:list"
+        android:id="@android:id/list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" 
+        android:layout_height="match_parent"
         android:layout_margin="10dp"
-        android:divider="@android:color/darker_gray" 
-        android:dividerHeight="0.5dp"
-        android:cacheColorHint="#00000000" 
-        >
+        android:cacheColorHint="@null"
+        android:childIndicatorLeft="0dp"
+        android:divider="@color/Grey"
+        android:dividerHeight="1dp"
+        android:groupIndicator="@null"
+        android:scrollbarAlwaysDrawHorizontalTrack="true" >
     </ExpandableListView>
 
 </LinearLayout>
