--- a/res/layout/question.xml
+++ b/res/layout/question.xml
@@ -41,6 +41,7 @@
     <ListView
         android:id="@+id/question_listview"
         android:layout_width="match_parent"
+        android:divider="@android:color/darker_gray" 
         android:dividerHeight="0.5dp"
         android:cacheColorHint="#00000000" 
         android:layout_height="match_parent" >
