--- a/res/layout/test_main.xml
+++ b/res/layout/test_main.xml
@@ -37,7 +37,7 @@
             android:textColor="@android:color/white"
             android:textSize="20sp" />
     </RelativeLayout>
-<!-- 
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
@@ -60,37 +60,40 @@
                     android:layout_height="wrap_content" >
 
                     <Button
-                        android:id="@+id/learnButton"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/test_baseButton"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
                         android:layout_marginRight="20dp"
-                        android:background="@drawable/test_commonBtn_selector"
-                        android:drawablePadding="-5dp"
+                        android:background="@drawable/test_commonbtn_selector"
+                        android:drawablePadding="-15dp"
                         android:drawableTop="@drawable/test_button1"
+                        android:paddingTop="10dp"
                         android:text="基础测试"
-                        android:textSize="16sp" />
+                        android:textSize="14sp" />
 
                     <Button
-                        android:id="@+id/learnButton1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/test_advanceButton1"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
                         android:layout_marginRight="20dp"
-                        android:background="@drawable/test_commonBtn_selector"
-                        android:drawablePadding="-5dp"
+                        android:background="@drawable/test_commonbtn_selector"
+                        android:drawablePadding="-15dp"
                         android:drawableTop="@drawable/test_button1"
                         android:text="进阶测试1"
-                        android:textSize="16sp" />
+                        android:paddingTop="10dp"
+                        android:textSize="14sp" />
 
                     <Button
-                        android:id="@+id/learnButton3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/test_advanceButton2"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
                         android:layout_marginRight="20dp"
-                        android:background="@drawable/test_commonBtn_selector"
-                        android:drawablePadding="-5dp"
+                        android:background="@drawable/test_commonbtn_selector"
+                        android:drawablePadding="-15dp"
                         android:drawableTop="@drawable/test_button1"
                         android:text="进阶测试2"
-                        android:textSize="16sp" />
+                        android:paddingTop="10dp"
+                        android:textSize="14sp" />
                 </TableRow>
 
                 <TableRow
@@ -99,29 +102,31 @@
                     android:layout_marginTop="15dp" >
 
                     <Button
-                        android:id="@+id/learnButton4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/test_collectButton"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
                         android:layout_marginRight="20dp"
-                        android:background="@drawable/test_commonBtn_selector"
-                        android:drawablePadding="-5dp"
+                        android:background="@drawable/test_commonbtn_selector"
+                        android:drawablePadding="-15dp"
                         android:drawableTop="@drawable/test_button4"
                         android:text="难题收藏"
-                        android:textSize="16sp" />
+                        android:paddingTop="10dp"
+                        android:textSize="14sp" />
 
                     <Button
-                        android:id="@+id/learnButton5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:id="@+id/test_gradeButton"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
                         android:layout_marginRight="20dp"
-                        android:background="@drawable/test_commonBtn_selector"
-                        android:drawablePadding="-5dp"
+                        android:background="@drawable/test_commonbtn_selector"
+                        android:drawablePadding="-15dp"
                         android:drawableTop="@drawable/test_button5"
-                        android:text="考试纪录"
-                        android:textSize="16sp" />
+                        android:text="考试成绩"
+                        android:paddingTop="10dp"
+                        android:textSize="14sp" />
                 </TableRow>
             </TableLayout>
         </LinearLayout>
     </ScrollView>
- -->
+
 </LinearLayout>
